src/App.css
body {
  background: grey;
}
.App {
  margin: 1rem;
  text-align: center;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
  grid-gap: 1rem;
}

.App > button {
  padding: 1rem;
  border: none;
  color: white;
  font-size: 1.2rem;
  outline: none;
}

.App > button::before {
  content: "";
  padding-bottom: 12%;
  display: block;
}
.App > button::after {
  content: "";
  padding-bottom: 75%;
  display: block;
}

.App > button:focus {
  outline: 0 !important;
}

.sheep {
  cursor: pointer;
  background-image: url("../src/images/sheep.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  background-color: transparent;
}

